Typos an biblio

--- a/deliverables/WP5/D5.4/D_5_4.bib
+++ b/deliverables/WP5/D5.4/D_5_4.bib
@@ -6,13 +6,10 @@
     abstract = {{The local reconstruction of a railway schedule following a small perturbation of the traffic, seeking minimization of the total accumulated delay, is a very difficult and tightly constrained combinatorial problem. Notoriously enough, the railway company's public image degrades proportionally to the amount of daily delays, and the same goes for its profit! This paper describes an inoculation procedure which greatly enhances an evolutionary algorithm for train re-scheduling. The procedure consists in building the initial population around a pre-computed solution based on problem-related information available beforehand. The optimization is performed by adapting times of departure and arrival, as well as allocation of tracks, for each train at each station. This is achieved by a permutation-based evolutionary algorithm that relies on a semi-greedy heuristic scheduler to gradually reconstruct the schedule by inserting trains one after another. Experimental results are presented on various instances of a large real-world case involving around 500 trains and more than 1 million constraints. In terms of competition with commercial math ematical programming tool ILOG CPLEX, it appears that within a large class of instances, excluding trivial instances as well as too difficult ones, and with very few exceptions, a clever initialization turns an encouraging failure into a clear-cut success auguring of substantial financial savings.}},
     language = {Anglais},
     affiliation = {TAO - INRIA Futurs},
-    booktitle = {{GECCO-2006}},
+    booktitle = {$16^{th}$ Genetic and Evolutionary Computation Conference (GECCO'06)},
     publisher = {ACM Press},
     pages = {1761-1768},
-    address = {Seattle, {\'E}tats-Unis},
-    editor = {Mike Cattolico et al. },
-    audience = {non sp{\'e}cifi{\'e}e },
-    year = {2006},
+    year = {2006}
 }
 
 @incollection{Surry96,
@@ -32,23 +29,24 @@ pages={269-285}
 
 @INPROCEEDINGS{Baluja95removingthe,
     author = {Shumeet Baluja and Rich Caruana},
-    title = {Removing the Genetics from the Standard Genetic Algorithm},
-    booktitle = {},
+    title = "{Removing the Genetics from the Standard Genetic Algorithm}",
+    booktitle = {the $12^{th}$ International Conference on Machine Learning},
     year = {1995},
     pages = {38--46},
     publisher = {Morgan Kaufmann Publishers}
 }
+
 @TECHREPORT{Kargupta95search,
     author = {Hillol Kargupta},
     title = {SEARCH, polynomial complexity, and the fast messy genetic algorithm},
-    institution = {},
-    year = {1995}
+    institution = {University of Illinois at Urbana-Champaign},
+    year = {1996}
 }
 
 @PHDTHESIS{SurryPHD,
     author = {Patrick Surry},
     title = {A Prescriptive Formalism for Constructing Domain-specific Evolutionary Algorithms (Chapter 10)},
-    institution = {University of Edinburgh, Scotland},
+    school = {University of Edinburgh, Scotland},
     year = {1998}
 }
 @book{Larranaga:2002b,
@@ -69,29 +67,22 @@ pages={269-285}
 }
 
 @article{DBLP:journals/corr/abs-1107-0052,
-  author    = {J{\"o}rg Hoffmann and
-               Julie Porteous and
-               Laura Sebastia},
-  title     = {Ordered Landmarks in Planning},
-  journal   = {CoRR},
-  volume    = {abs/1107.0052},
-  year      = {2011},
-  ee        = {http://arxiv.org/abs/1107.0052},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+  author    = {J{\"o}rg Hoffmann and Julie Porteous and Laura Sebastia},
+  title     = "{Ordered Landmarks in Planning}",
+	journal = {J. Artif. Intell. Res. (JAIR)},
+  volume = {22},
+  pages = {215-278},
+  year  = {2004}
 }
 
 @inproceedings{DBLP:conf/aips/BibaiSSV10,
-  author    = {Jacques Bibai and
-               Pierre Sav{\'e}ant and
-               Marc Schoenauer and
-               Vincent Vidal},
-  title     = {An Evolutionary Metaheuristic Based on State Decomposition
-               for Domain-Independent Satisficing Planning},
-  booktitle = {ICAPS},
-  year      = {2010},
-  pages     = {18-25},
-  ee        = {http://www.aaai.org/ocs/index.php/ICAPS/ICAPS10/paper/view/1414},
-  crossref  = {DBLP:conf/aips/2010},
-  bibsource = {DBLP, http://dblp.uni-trier.de}
+ 	AUTHOR = "Jacques Biba{\"i} and Pierre Sav\'eant and Marc Schoenauer and Vincent Vidal",
+	TITLE = "{An Evolutionary Metaheuristic Based on State Decomposition for Domain-Independent Satisficing Planning}",
+	BOOKTITLE = "$20^{th}$ International Conference on Automated Planning and Scheduling (ICAPS-2010)",
+	PAGES = {18-25},
+	PUBLISHER = {ACM},
+	keywords = {Evolutionary Computation, Automated Planning, Divide-and-Evolve},
+	ISBN = "978-1-57735-449-9",
+	YEAR = {2010}	}
 }
 
